fix single blog page title spacing, finish styling archive blog page desktop & mobile.

--- a/themes/nexus/sass/_archive.scss
+++ b/themes/nexus/sass/_archive.scss
@@ -51,8 +51,13 @@ body.archive {
       text-align: center; 
       font-size: 15px;
       font-weight: 200;
+      font-style: italic;
+      border-bottom: 1px solid #d3d3d3;
+      padding-bottom: 20px;
+      color: $color__footer-background;
       @media #{$desktop}{
-        top: 70px;
+        border-bottom: none;
+        top: 80px;
         font-size: 18px;
      
       }  
@@ -63,8 +68,11 @@ body.archive {
       font-size: 21px;
       margin-left: 15px;
       margin-right: 15px;
-      @media #{$desktop}{
+      @media all and (min-width: 700px) {
         font-size: 24px;
+      }
+      @media #{$desktop}{
+        font-size: 28px;
       }
     }
     .wp-post-image {
@@ -75,6 +83,7 @@ body.archive {
       flex-direction: column;
       border: none;
       border-bottom: 1px solid #d3d3d3;
+      padding-bottom: 15px;
       @media #{$desktop} {
         border: 1px solid #d3d3d3;
         margin: 80px;
@@ -88,17 +97,22 @@ body.archive {
       .entry-meta {
         margin-left: 15px;
         margin-right: 15px;
-        font-size: 14px;
-
+        font-size: 12px;
+        @media all and (min-width: 700px) {
+          font-size: 14px;
+        }
       }
       p {
         display: inline-block;
         width: 85%;
         text-align: center;
         line-height: 30px;
-        font-size: 16px;
+        font-size: 14px;
         color: $color__footer-background;
-        @media #{$desktop} {
+        @media all and (min-width: 700px) {
+          font-size: 16px;
+        }
+          @media all and (min-width: 1080px) {
           width: 70%;
           text-align: left;
           font-size: 18px;
